# bindgen_shared_c_repo

core-sys/: Cargo.toml  build.rs
user/: Cargo.toml
user-a-sys/: Cargo.toml  build.rs
user-b-sys/: Cargo.toml  build.rs
user-b-sys/src/: lib.rs
user/src/: main.rs
