[package]
name = "core-sys-test-haobo"
version = "0.2.0"
edition = "2024"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Test"
homepage = "https://https://github.com/haobogu/bindgen-shared-c-repo"
repository = "https://https://github.com/haobogu/bindgen-shared-c-repo"
license = "MIT OR Apache-2.0"
links = "the_c_library"

[dependencies]

[build-dependencies]
cc = "1.0"