[package]
name = "user-a-sys-test-haobo"
version = "0.4.0"
edition = "2024"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Test"
license = "MIT OR Apache-2.0"
homepage = "https://https://github.com/haobogu/bindgen-shared-c-repo"
repository = "https://https://github.com/haobogu/bindgen-shared-c-repo"

[dependencies]
core-sys-test-haobo = { version = "0.2.0" }

[build-dependencies]
bindgen = "0.72" # 用于生成绑定
cc = "1.0"